[package]
name = "jito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dotenv = "0.15"
solana-rpc-client = { version = "=1.16.19" }
solana-rpc-client-api = { version = "=1.16.19" }
solana-sdk = { version = "=1.16.19" }
solana-program = { version = "=1.16.19" }
tokio = "1.29.1"

[patch.crates-io]
solana-rpc-client = { git = "https://github.com/jito-foundation/jito-solana/", tag = "v1.16.19-jito" }
solana-rpc-client-api = { git = "https://github.com/jito-foundation/jito-solana/", tag = "v1.16.19-jito" }
solana-sdk = { git = "https://github.com/jito-foundation/jito-solana/", tag = "v1.16.19-jito" }
solana-program = { git = "https://github.com/jito-foundation/jito-solana/", tag = "v1.16.19-jito" }
